...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_explanation"
        android:layout_width="276dp"
        android:layout_height="337dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
...
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_topic" />

    <Button
        android:id="@+id/button_activities"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/activities_caps"
        app:backgroundTint="@color/blue_app"
...
