...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_type" />


    <ListView
        android:id="@+id/recycler_topic"
        android:layout_width="291dp"
        android:layout_height="347dp"
        android:layout_marginTop="16dp"
        android:divider="@color/white_background"
        android:dividerHeight="12dp"
        android:focusable="true"
...
