...
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_question_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="Question: 1/x"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_name" />

    <TextView
        android:id="@+id/text_view_topic_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="topic:"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/text_view_question_count"
        app:layout_constraintTop_toBottomOf="@+id/text_view_question_count" />

    <TextView
        android:id="@+id/text_view_level_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="level:"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/text_view_topic_name"
...
